Complete shop.html

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                         </a>
                         <ul class="menu">
                             <li class="menu__item">
-                                <a class="main-link menu__link active" href="#">
+                                <a class="main-link menu__link active" href="./">
                                     Главная
                                 </a>
                             </li>
                             <li class="menu__item">
-                                <a class="main-link menu__link" href="#">
+                                <a class="main-link menu__link" href="./shop.html">
                                     Магазин
                                 </a>
                             </li>
@@ -357,12 +357,12 @@
                     </a>
                     <ul class="menu">
                         <li class="menu__item">
-                            <a class="main-link menu__link active" href="#">
+                            <a class="main-link menu__link active" href="./">
                                 Главная
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a class="main-link menu__link" href="#">
+                            <a class="main-link menu__link" href="./shop.html">
                                 Магазин
                             </a>
                             <ul class="menu__dropdown">
